syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.app.orderproductservice.proto";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message GetOrderRequest {
  string order_id = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message OrderResponse {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  double total_price = 5;
  string status = 6;
  string created_at = 7;
  string updated_at = 8;
} 